--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ PyQt5-Qt5==5.15.2
 PyQt5-sip==12.13.0
 tensorboard==2.15.1
 tensorboard-data-server==0.7.2
-tokenizers==0.15.0
+sentencepiece==0.2.0
 torch==2.1.2
 torch-tb-profiler==0.4.3
 torchmetrics==1.3.0
