--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,9 @@
-numpy==1.26.3
-PyQt5==5.15.10
-PyQt5-Qt5==5.15.2
-PyQt5-sip==12.13.0
+# PyQt5==5.15.10
+# PyQt5-Qt5==5.15.2
+# PyQt5-sip==12.13.0
 tensorboard==2.18.0
-tensorboard-data-server==0.7.2
 sentencepiece==0.2.0
-torch==2.5.1
+torch==2.4.0
 torch-tb-profiler==0.4.3
-torchmetrics==1.3.0
 tqdm==4.66.1
 typing_extensions==4.9.0
